src/main/kotlin/offer/technical/test/errors/AlreadyExistsExceptionKt.kt
package offer.technical.test.errors

data class AlreadyExistsExceptionKt(override var message: String? = null) : Exception() {

}